fix import public and private keys