@@ -1,9 +1,7 @@
 package enc;
 
-import sun.misc.BASE64Decoder;
 import sun.misc.BASE64Encoder;
 
-import javax.annotation.processing.SupportedSourceVersion;
 import java.io.*;
 import java.security.*;
 import java.security.KeyPair;
@@ -12,6 +10,8 @@ import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Base64;
 
 public class KeyStore {
   private File file;
@@ -41,7 +41,7 @@ public class KeyStore {
 
   public byte[] open(String passphrase, boolean isKeyStoreFile) {
     // 1. Decrypt keystore file
-    this.tempDecryptedPath = App.fes.decryptFile(this.file.getAbsolutePath(), passphrase, KEYSTORE_ENCRYPTION_METHOD);
+    this.tempDecryptedPath = App.fes.decryptFile(this.file.getAbsolutePath(), passphrase);
 
     // 2. Read passphrase (first line)
     String correctPassphrase = this.readLine(tempDecryptedPath);
@@ -72,27 +72,24 @@ public class KeyStore {
           String name = currentLine.substring(6, currentLine.length());
           currentLine = br.readLine();
           String description = currentLine.substring(6, currentLine.length());
-          System.out.println(name);
-          System.out.println(description);
 
           currentLine = br.readLine();
-          String publicKey = currentLine.substring(0, currentLine.length());
-//          byte[] publicKeyBytes = (new BASE64Decoder()).decodeBuffer(publicKey);
-//          System.out.println(publicKey);
-//          System.out.println(publicKeyBytes);
-//          X509EncodedKeySpec pubKeySpec = new X509EncodedKeySpec(publicKey.getBytes());
-//          KeyFactory pubKeyFactory = KeyFactory.getInstance("RSA");
-//          java.security.PublicKey pubKey = pubKeyFactory.generatePublic(pubKeySpec);
-//
-          if (isPair) {
-//            currentLine = br.readLine();
-//            String privateKey = currentLine.substring(6, currentLine.length());
-//            PKCS8EncodedKeySpec privKeySpec = new PKCS8EncodedKeySpec(privateKey.getBytes());
-//            KeyFactory privKeyFactory = KeyFactory.getInstance("RSA");
-//            java.security.PrivateKey privKey = privKeyFactory.generatePrivate(privKeySpec);
+          String publKey = currentLine.substring(6, currentLine.length());
+          byte[] publKeyBytes = Base64.getDecoder().decode(publKey);
+          X509EncodedKeySpec x509EncodedKeySpec = new X509EncodedKeySpec(publKeyBytes);
+          KeyFactory publKeyFactory = KeyFactory.getInstance("RSA");
+          PublicKey publicKey = publKeyFactory.generatePublic(x509EncodedKeySpec);
 
-//            KeyPair pair = new KeyPair(pubKey, privKey);
-//            enc.KeyPair keyPair = new enc.KeyPair(pair, name, description);
+          if (isPair) {
+            currentLine = br.readLine();
+            String privKey = currentLine.substring(6, currentLine.length());
+            byte[] privKeyBytes = Base64.getDecoder().decode(privKey);
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(privKeyBytes);
+            KeyFactory privKeyFactory = KeyFactory.getInstance("RSA");
+            PrivateKey privateKey = privKeyFactory.generatePrivate(keySpec);
+
+            KeyPair pair = new KeyPair(publicKey, privateKey);
+            enc.KeyPair keyPair = new enc.KeyPair(pair, name, description);
           }
         } else {
 //          baos.write(currentLine.getBytes());
@@ -168,37 +165,26 @@ public class KeyStore {
       PrivateKey privateKey = pair.getPrivate();
       PublicKey publicKey = pair.getPublic();
 
-      X509EncodedKeySpec x509EncodedKeySpec = new X509EncodedKeySpec(
-              publicKey.getEncoded());
-      byte[] pubKeyBytes = x509EncodedKeySpec.getEncoded();
-
-      PKCS8EncodedKeySpec pkcs8EncodedKeySpec = new PKCS8EncodedKeySpec(
-              privateKey.getEncoded());
+      KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+      X509EncodedKeySpec x509EncodedKeySpec = keyFactory.getKeySpec(publicKey, X509EncodedKeySpec.class);
+      PKCS8EncodedKeySpec pkcs8EncodedKeySpec = keyFactory.getKeySpec(privateKey, PKCS8EncodedKeySpec.class);
       byte[] privKeyBytes = pkcs8EncodedKeySpec.getEncoded();
 
       this.writeLine("Pair: " + true, false);
       this.writeLine("Name: " + name, false);
       this.writeLine("Desc: " + desc, false);
 
-      BufferedWriter bw = new BufferedWriter(new FileWriter(this.tempDecryptedPath, true));
-      BASE64Encoder b64 = new BASE64Encoder();
-      bw.write(b64.encode(publicKey.getEncoded()));
-      bw.close();
+      this.writeLine(("Publ: " + Base64.getEncoder().encodeToString(x509EncodedKeySpec.getEncoded())), false);
+      this.writeLine("Priv: " + Base64.getEncoder().encodeToString(privKeyBytes), false);
 
-//      this.writeLine(pubKeyBytes.toString(), false);
-//      this.writeLine(privKeyBytes.toString(), false);
-
-//      this.writeLine("Publ: " + privateKey.toString(), false);
-//      this.writeLine("Priv: " + publicKey.toString(), false);
-
-//      KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-//      X509EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(
-//              pubKeyBytes);
-//      PublicKey pubKey = keyFactory.generatePublic(publicKeySpec);
-//      System.out.println(pubKey.getEncoded());
+      //KeyFactory keyFactory = KeyFactory.getInstance("DSA");
+      //X509EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(
+      //        pubKeyBytes);
+      //PublicKey pubKey = keyFactory.generatePublic(publicKeySpec);
+      //System.out.println(pubKey.getEncoded());
     } catch (NoSuchAlgorithmException e) {
       e.printStackTrace();
-    } catch (IOException e) {
+    } catch (InvalidKeySpecException e) {
       e.printStackTrace();
     }
   }
@@ -251,6 +237,12 @@ public class KeyStore {
     if (keyRing != null){
       return keyRing.getPrivateKey(name);
     }
+    return null;
+  }
+
+  public Key getPublicKey(String name){
+//    if (keyRing != null)
+//      return keyRing.getPublicKey(name);
     return null;
   }
 }
